--- a/WeatherUI.html
+++ b/WeatherUI.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <title>Weather Application By Team Jenkins</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
 </head>
@@ -53,7 +53,7 @@
         </section>
     </div>
 
-    <script src="script.js"></script>
+    <script src="js/set-background.js"></script>
 
 </body>
 
